# docs/swagger.json
@@ -30,6 +30,20 @@
                     "Categories"
                 ],
                 "summary": "Show categories",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Items per page",
+                        "name": "per_page",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -59,7 +73,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Categories"
+                            "$ref": "#/definitions/reqdto.CategoryRequest"
                         }
                     }
                 ],
@@ -191,6 +205,20 @@
                     "Product"
                 ],
                 "summary": "Show product",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Items per page",
+                        "name": "per_page",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -220,7 +248,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Produk"
+                            "$ref": "#/definitions/reqdto.ProductRequest"
                         }
                     }
                 ],
@@ -293,7 +321,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Produk"
+                            "$ref": "#/definitions/reqdto.ProductRequest"
                         }
                     }
                 ],
@@ -344,31 +372,61 @@
         "model.Categories": {
             "type": "object",
             "properties": {
+                "created_at": {
+                    "type": "string"
+                },
                 "description": {
                     "type": "string"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 }
             }
         },
-        "model.Produk": {
+        "reqdto.CategoryRequest": {
             "type": "object",
+            "required": [
+                "description",
+                "name"
+            ],
             "properties": {
-                "harga": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "nama": {
+                "description": {
                     "type": "string"
                 },
-                "stok": {
+                "name": {
+                    "type": "string",
+                    "minLength": 3
+                }
+            }
+        },
+        "reqdto.ProductRequest": {
+            "type": "object",
+            "required": [
+                "category_id",
+                "name",
+                "price",
+                "stock"
+            ],
+            "properties": {
+                "category_id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string",
+                    "minLength": 3
+                },
+                "price": {
                     "type": "integer"
+                },
+                "stock": {
+                    "type": "integer",
+                    "minimum": 0
                 }
             }
         }
