# internal/model/dto/reqdto/category.go
@@ -1,0 +1,6 @@
+package reqdto
+
+type CategoryRequest struct {
+	Name        string `json:"name" validate:"required,min=3"`
+	Description string `json:"description" validate:"required"`
+}
