# internal/model/product.go
@@ -1,12 +1,17 @@
 package model
 
-import "time"
+import (
+	"time"
+
+	"github.com/gofrs/uuid/v5"
+)
 
 type Product struct {
-	ID        int       `sql:"id" json:"id"`
-	Name      string    `sql:"name" json:"name"`
-	Price     int       `sql:"price" json:"price"`
-	Stock     int       `sql:"stock" json:"stock"`
-	CreatedAt time.Time `sql:"created_at" json:"created_at"`
-	UpdatedAt time.Time `sql:"updated_at" json:"updated_at"`
+	ID         uuid.UUID       `sql:"id" json:"id"`
+	Name       string    `sql:"name" json:"name"`
+	Price      int       `sql:"price" json:"price"`
+	Stock      int       `sql:"stock" json:"stock"`
+	CategoryID uuid.UUID    `sql:"category_id" json:"category_id"`
+	CreatedAt  time.Time `sql:"created_at" json:"created_at"`
+	UpdatedAt  time.Time `sql:"updated_at" json:"updated_at"`
 }
